<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name" />

            <EditText
                android:id="@+id/getName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="15"
                android:hint="@string/getName"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mobile" />

                <EditText
                    android:id="@+id/getMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="15"
                    android:hint="@string/getMobile"
                    android:inputType="phone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/size" />

                    <EditText
                        android:id="@+id/getSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="15"
                        android:hint="@string/getSize"
                        android:inputType="phone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/textTime" />

                        <TimePicker
                            android:id="@+id/timePicker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:timePickerMode="spinner" />

                        <TextView
                            android:id="@+id/textDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/textDate" />

                        <DatePicker
                            android:id="@+id/datePicker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:calendarViewShown="false"
                            android:datePickerMode="spinner" />

                        <TextView
                            android:id="@+id/tvPreferences"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/textTable" />

                        <RadioGroup
                            android:id="@+id/TablePreference"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/Smoking"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/smoke" />

                            <RadioButton
                                android:id="@+id/NonSmoking"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/nonSmoking" />

                        </RadioGroup>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/buttonReserve"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="255px"
                                android:layout_marginLeft="255px"
                                android:text="@string/buttonReserve" />

                            <Button
                                android:id="@+id/buttonReset"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="100px"
                                android:layout_marginLeft="100px"
                                android:text="@string/buttonReset" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
